# w1-therm-haskell

./: LICENSE  README.md  w1-therm-haskell.cabal
app/: Main.hs
src/: Lib.hs
src/System/Hardware/OneWire/: Thermal.hs
