name:                w1-therm-haskell
version:             0.1.0.0
synopsis:            Read thermal sensors supported by the w1-therm Linux kernel module
description:         Please see README.md
homepage:            https://github.com/githubuser/w1-therm-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Amsden
maintainer:          edwardamsden@gmail.com
copyright:           2017 Edward Amsden
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Hardware.OneWire.Thermal
  build-depends:       base >= 4.7 && < 5
                     , scientific
                     , text
                     , attoparsec
                     , parsers
                     , directory
                     , filepath
                     , MissingH
                     , bytestring
  default-language:    Haskell2010

executable w1-therm-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , w1-therm-haskell
                     , scientific
  default-language:    Haskell2010

test-suite w1-therm-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , w1-therm-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/w1-therm-haskell
